versioned_docs/version-5.2/client-api/operations/maintenance/content/_get-stats-nodejs.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';

<Admonition type="note" title="">

* Statistics about your database and collections can be retrieved.

* By default, you get stats for the database defined in your Document Store.   
  To get database and collection stats for another database use [forDatabase](../../../../client-api/operations/maintenance/get-stats.mdx#get-stats-for-another-database).

* In this page:
    * [Get collection stats](../../../../client-api/operations/maintenance/get-stats.mdx#get-collection-stats)
    * [Get detailed collection stats](../../../../client-api/operations/maintenance/get-stats.mdx#get-detailed-collection-stats)
    * [Get database stats](../../../../client-api/operations/maintenance/get-stats.mdx#get-database-stats)
    * [Get detailed database stats](../../../../client-api/operations/maintenance/get-stats.mdx#get-detailed-database-stats)
    * [Get stats for another database](../../../../client-api/operations/maintenance/get-stats.mdx#get-stats-for-another-database)
</Admonition>
## Get collection stats
<Admonition type="note" title="">
Use `GetCollectionStatisticsOperation` to get __collection stats__.
<TabItem value="stats_1" label="stats_1">
<CodeBlock language="js">
{`// Pass an instance of class \`GetCollectionStatisticsOperation\` to the store 
const stats = await store.maintenance.send(new GetCollectionStatisticsOperation());
`}
</CodeBlock>
</TabItem>
</Admonition>
<Admonition type="note" title="">
Collection stats results:
<TabItem value="stats_1_results" label="stats_1_results">
<CodeBlock language="js">
{`// Object with following props is returned:
\{
    // Total # of documents in all collections
    countOfDocuments,
    // Total # of conflicts
    countOfConflicts,
    // Dictionary with total # of documents per collection
    collections
\}
`}
</CodeBlock>
</TabItem>
</Admonition>


## Get detailed collection stats
<Admonition type="note" title="">
Use `GetDetailedCollectionStatisticsOperation` to get __detailed collection stats__.
<TabItem value="stats_2" label="stats_2">
<CodeBlock language="js">
{`// Pass an instance of class \`GetDetailedCollectionStatisticsOperation\` to the store 
const stats = await store.maintenance.send(new GetDetailedCollectionStatisticsOperation());
`}
</CodeBlock>
</TabItem>
</Admonition>
<Admonition type="note" title="">
Detailed collection stats results:
<TabItem value="stats_2_results" label="stats_2_results">
<CodeBlock language="js">
{`// Object with following props is returned:
\{
    // Total # of documents in all collections
    countOfDocuments,
    // Total # of conflicts
    countOfConflicts,
    // Dictionary with 'collection details per collection'
    collections,
\}

// 'Collection details per collection' object props:
\{
    name,
    countOfDocuments,
    size,
    documentsSize,
    tombstonesSize,
    revisionsSize
\}
`}
</CodeBlock>
</TabItem>
</Admonition>


## Get database stats
<Admonition type="note" title="">
Use `GetStatisticsOperation` to get __database stats__.
<TabItem value="stats_3" label="stats_3">
<CodeBlock language="js">
{`// Pass an instance of class \`GetStatisticsOperation\` to the store 
const stats = await store.maintenance.send(new GetStatisticsOperation());
`}
</CodeBlock>
</TabItem>
</Admonition>
<Admonition type="note" title="">
Database stats results:
<TabItem value="stats_3_results" label="stats_3_results">
<CodeBlock language="js">
{`// Object with following props is returned:
\{
    lastDocEtag,      // Last document etag in database
    lastDatabaseEtag, // Last database etag
    
    countOfIndexes,            // Total # of indexes in database
    countOfDocuments,          // Total # of documents in database
    countOfRevisionDocuments,  // Total # of revision documents in database
    countOfDocumentsConflicts, // Total # of documents conflicts in database 
    countOfTombstones,         // Total # of tombstones in database
    countOfConflicts,          // Total # of conflicts in database
    countOfAttachments,        // Total # of attachments in database
    countOfUniqueAttachments,  // Total # of unique attachments in database
    countOfCounterEntries,     // Total # of counter-group entries in database
    countOfTimeSeriesSegments, // Total # of time-series segments in database
    
    indexes, // Statistics for each index in database (array of IndexInformation) 

    databaseChangeVector,  // Global change vector of the database
    databaseId,            // Database identifier
    is64Bit,               // Indicates if process is 64-bit 
    pager,                 // Component handling the memory-mapped files
    lastIndexingTime,      // Last time of indexing an item
    sizeOnDisk,            // Database size on disk
    tempBuffersSizeOnDisk, // Temp buffers size on disk
    numberOfTransactionMergerQueueOperations
\}
`}
</CodeBlock>
</TabItem>
</Admonition>


## Get detailed database stats
<Admonition type="note" title="">
Use `GetDetailedStatisticsOperation` to get __detailed database stats__.
<TabItem value="stats_4" label="stats_4">
<CodeBlock language="js">
{`// Pass an instance of class \`GetDetailedStatisticsOperation\` to the store 
const stats = await store.maintenance.send(new GetDetailedStatisticsOperation());
`}
</CodeBlock>
</TabItem>
</Admonition>
<Admonition type="note" title="">
Detailed database stats results:
<TabItem value="stats_4_results" label="stats_4_results">
<CodeBlock language="js">
{`// Resulting object contains all database stats props from above and the following in addition:
\{
    // Total # of identities in database
    countOfIdentities,
    // Total # of compare-exchange items in database
    countOfCompareExchange,
    // Total # of cmpXchg tombstones in database
    countOfCompareExchangeTombstones,
    // Total # of TS deleted ranges values in database
    countOfTimeSeriesDeletedRanges
\}
`}
</CodeBlock>
</TabItem>
</Admonition>


## Get stats for another database
<Admonition type="note" title="">

* By default, you get stats for the database defined in your Document Store.
* Use `forDatabase` to get database & collection stats for another database.
* 'forDatabase' can be used with __any__ of the above stats options.
 
<TabItem value="stats_5" label="stats_5">
<CodeBlock language="js">
{`// Get stats for 'AnotherDatabase':
const stats = 
    await store.maintenance.forDatabase("AnotherDatabase").send(new GetStatisticsOperation());
`}
</CodeBlock>
</TabItem>

* Learn more about switching operations to another database [here](../../../../client-api/operations/how-to/switch-operations-to-a-different-database.mdx).

</Admonition>



